Standardized links to SC suttas.

--- a/01_agama/samyukta/01/SA1_20.md
+++ b/01_agama/samyukta/01/SA1_20.md
@@ -43,7 +43,7 @@ next: SA1_21.html
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is a variant of the previous one (<a href="SA1_17.html" target="_blank">SĀ 1.19</em>). Both correspond to <a href="https://suttacentral.net/sn22.26/en/sujato" target="_blank">SN 22.26-28</a>, with this <em>sūtra</em> being closest to <a href="https://suttacentral.net/sn22.27/en/sujato" target="_blank">SN 22.27</a>. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is a variant of the previous one (<a href="SA1_17.html" target="_blank">SĀ 1.19</em>). Both correspond to <a href="https://suttacentral.net/sn22.26" target="_blank">SN 22.26-28</a>, with this <em>sūtra</em> being closest to <a href="https://suttacentral.net/sn22.27" target="_blank">SN 22.27</a>. [\[back\]](#ref1)
 2. {:#n1} <em>realized … as a result</em>. Ch. 隨順覺. The parallel word in SN 22.27 is P. <em>tadajjhagama</em> (“found that”), which combines a relative pronoun with a form of P. <em>adhigacchati</em>. The C. appears to translate a different word in Prakrit that meant something like “consequently realized.” Of course, “realized” in the sense of discovering something is similar to the “found” meaning that P. <em>adhigacchati</em> can have. I wonder if the Prakrit here might have been equiv. to <em>anugacchati</em>. It would explain the prefix 隨順, which sometimes translates <em>anu-</em> in Indic words. While S. <em>gacchati</em> has meanings like the P. word (“to go, obtain, pass away”), it can also mean “to understand” or “perceive,” which matches 覺 much better. [\[back\]](#ref1)
 
 ---
