--- a/01_agama/samyukta/01/SA1_21.md
+++ b/01_agama/samyukta/01/SA1_21.md
@@ -54,7 +54,7 @@ The monk said to the Buddha, “I’ve understood, Bhagavān! I’ve understood,
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> and the next are parallel to <a href="https://suttacentral.net/sn22.36/en/sujato" target="_blank">SN 22.36</a> and share the same template as <a href="https://suttacentral.net/sn22.35/en/sujato" target="_blank">SN 22.35</a>. The differences between the C. and P. appear to revolve around the reading of Prakrit <em>anumīyati</em>. The Theravāda tradition reads it as an synonym of P. <em>saṅkha</em> (which can be a unit of measure). The present version instead reads it as equiv. to S. <em>anumṛyate</em> and also adds additional words to the passage in question. See the note below for more on these language issues. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> and the next are parallel to <a href="https://suttacentral.net/sn22.36" target="_blank">SN 22.36</a> and share the same template as <a href="https://suttacentral.net/sn22.35" target="_blank">SN 22.35</a>. The differences between the C. and P. appear to revolve around the reading of Prakrit <em>anumīyati</em>. The Theravāda tradition reads it as an synonym of P. <em>saṅkha</em> (which can be a unit of measure). The present version instead reads it as equiv. to S. <em>anumṛyate</em> and also adds additional words to the passage in question. See the note below for more on these language issues. [\[back\]](#ref1)
 2. {:#n2} <em>brings about the tendencies … brings about death</em>. C. 隨使使⋯隨使死, P. <em>anuseti … anumīyati</em>. This is one of the most difficult passages in SĀ. The exact meaning of 隨使使 is unclear. It could be a textual corruption, as it only occurs in this and the next <em>sūtra</em>. Nor can I find any evidence that 隨使 had an idiomatic meaning in C. Therefore, I’ve read the first 使 in its general C. meaning for causing something to happen, which is used in various personal and impersonal contexts. I take the second 使 as a translation S. <em>anuśaya</em>. Lit., it means something like “instigator,” but I translate it as “tendency” since Buddhists used <em>anuśaya</em> as a technical term for the afflictions when they are dormant but not yet eliminated. This makes 隨 either a coverb or adverb meaning “following” or “consequently.” Since this passage puts each of the five aggregates into the subject position, I’ve opted to read 者 as referring to “something” rather than “someone.”<br/>
 The lit. meaning of 隨使使者 then would be “something that consequently brings about the tendencies” or “something that follows the bringing about of the tendencies.” I’ve opted for the former reading because Buddhist texts commonly treat the aggregates and senses as the external stimuli that activate afflictions like desire or dislike. I’ve shortened that reading to “something that brings about the tendencies” for brevity.<br/>
 On the reading of the Pali equivalent to 隨使死 found in SN 22.36 (i.e., <em>anumīyati</em>), see Bodhi <cite>Connected Discourses</cite> Vol. I, 1053-4 n. 49. He says the Pali commentary reads the term as equivalent to S. <em>anumṛyate</em> (“follows in death”) and that the <em>anuśaya</em> cease when the aggregates do. Bodhi and other Pali translators don’t take this reading seriously, but it in fact agrees somewhat with the Chinese parallel here. The difference is that the C. gives us no indication that the aggregates bring about the death of the tendencies, as the Pali commentator claims. The straightforward reading of the C. passage is that the aggregates cause death (because they are impermanent), and therefore they are subject to grasping (for the same reason).<br/>
