--- a/01_agama/samyukta/01/SA1_22.md
+++ b/01_agama/samyukta/01/SA1_22.md
@@ -54,7 +54,7 @@ next: SA1_23.html
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> corresponds to <a href="https://suttacentral.net/sn22.36/en/sujato" target="_blank">SN 22.36</a> and is similar to <a href="https://suttacentral.net/sn22.35/en/sujato" target="_blank">SN 22.35</a>. Aside from being largely abbreviated by the C. translator, the only difference between this <em>sūtra</em> and the previous one is that it substitutes “increasing in number” for “bound by grasping.” See the notes to <a href="SA1_21.html" target="_blank">SĀ 1.21</a> for more discussion of these parallels. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> corresponds to <a href="https://suttacentral.net/sn22.36" target="_blank">SN 22.36</a> and is similar to <a href="https://suttacentral.net/sn22.35" target="_blank">SN 22.35</a>. Aside from being largely abbreviated by the C. translator, the only difference between this <em>sūtra</em> and the previous one is that it substitutes “increasing in number” for “bound by grasping.” See the notes to <a href="SA1_21.html" target="_blank">SĀ 1.21</a> for more discussion of these parallels. [\[back\]](#ref1)
 2. {:#n2} A large portion of this <em>sūtra</em> was omitted as identical to SĀ 1.21. The passages in brackets have been reconstituted following the Chinese translator’s abbreviation notes. [\[back\]](#ref2)
 
 ---
