--- a/01_agama/samyukta/01/SA1_25.md
+++ b/01_agama/samyukta/01/SA1_25.md
@@ -45,7 +45,7 @@ That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve under
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is a variant of <a href="SA1_23.html" target="_blank">SĀ 1.23</a>, and it has a parallel in Pali at <a href="https://suttacentral.net/sn22.34/en/sujato" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33/en/sujato" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. It’s also similar to <a href="https://suttacentral.net/sn22.65/en/sujato" target="_blank">SN 22.65</a>, but that <em>sutta</em> adds Māra and delighting in the five aggregates to the advice given. The next and previous two <em>sūtra</em>s are variants that substitute different principles for the monk to contemplate. See <a href="SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is a variant of <a href="SA1_23.html" target="_blank">SĀ 1.23</a>, and it has a parallel in Pali at <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. It’s also similar to <a href="https://suttacentral.net/sn22.65" target="_blank">SN 22.65</a>, but that <em>sutta</em> adds Māra and delighting in the five aggregates to the advice given. The next and previous two <em>sūtra</em>s are variants that substitute different principles for the monk to contemplate. See <a href="SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [\[back\]](#ref1)
 
 ---
 
