--- a/01_agama/samyukta/01/SA1_29.md
+++ b/01_agama/samyukta/01/SA1_29.md
@@ -42,7 +42,7 @@ Rāhula said to the Buddha, “Yes, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.91/en/sujato" target="_blank">SN 22.91-92</a>. It also shares a very similar template with <a href="https://suttacentral.net/sn18.21/en/sujato" target="_blank">SN 18.21-22</a> and <a href="../02/SA2_41-48.html" target="_blank">SĀ 2.41-48</a>  (which apply the same template to the six senses and related elements of sensory experience).<br/>
+1. {:#n1} This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.91" target="_blank">SN 22.91-92</a>. It also shares a very similar template with <a href="https://suttacentral.net/sn18.21" target="_blank">SN 18.21-22</a> and <a href="../02/SA2_41-48.html" target="_blank">SĀ 2.41-48</a>  (which apply the same template to the six senses and related elements of sensory experience).<br/>
 A comparison of this <em>sūtra</em> with SĀ 2.41-48 is instructive in the instability of Chinese translations of nearly identical Indic <em>sūtra</em>s. Seemingly minor changes in wording and grammar make the meaning of these parallel texts shift in significant ways. It’s difficult to determine whether this was the result of inconsistent translation or poor copying of the text in later centuries. The same issues may have existed in the original manuscript that was translated to Chinese, too. Being that it’s difficult to decide with certainty which version is the most accurate, I’ve translated both Chinese translations as faithfully as possible. [\[back\]](#ref1)
 2. {:#n2} <em>right at that moment</em>. C. 正無間等. Lit. “exactly immediate.” There are passages in SĀ that appear to indicate that P. <em>abhisamaya</em> is the parallel to 無間等, but the two words mean very different things, making it unlikely to me. S. <em>ānantarya</em> (“immediate succession”) would match the meaning of the C. much better. If that’s the case, then the Indic parallel would have been equiv. to something like S. <em>samānantarya</em> (“a complete immediacy”?). The functional meaning of the word here would seem to describe the immediacy of a sudden realization. This might explain why the corresponding word in some P. parallels is <em>abhisamaya</em> (“penetration to understanding”). [\[back\]](#ref2)
 
