--- a/01_agama/samyukta/01/SA1_31.md
+++ b/01_agama/samyukta/01/SA1_31.md
@@ -33,7 +33,7 @@ The monk said to the Buddha, “Indeed, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This and the next four <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115/en/sujato" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. [\[back\]](#ref1)
+1. {:#n1} This and the next four <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. [\[back\]](#ref1)
 2. {:#n2} <em>learns about … principle of peace</em>. C. 聞. Lit. “hears about.” Education in ancient India was conducted orally prior to the widespread adoption of writing, and even then oral recitation and memorization continued as a basic way of learning for a long time. Thus, “hearing about” something could mean being learned in the subject, as it does here. The expression 多聞 (P. <em>bahussuta</em>, S. <em>bahuśruta</em>), which lit. means “heard much” but functions as “very learned,” signals this context for us.<br/>
 The three steps of disillusionment with, becoming free of desire for, and complete cessation of the aggregates is the common definition (or process) of being liberated from them. A fourth item is added here, the “principle of peace” (寂靜法). It’s not entirely clear to me what this expression means exactly, as it only occurs here and in the next <em>sūtra</em> in SĀ without any further comment about it. In other C. translations, it sometimes meant the teaching of peace that leads to Nirvāṇa, which certainly fits the context here (cf. T721.17.283a8: 爾時，彼處彌勒世尊說寂靜法向涅槃城⋯). Different fourth items are added in the other <em>sūtra</em>s; these apparent additions aren’t found in SN 22.115-116. [\[back\]](#ref2)
 
