--- a/01_agama/samyukta/01/SA1_32.md
+++ b/01_agama/samyukta/01/SA1_32.md
@@ -36,7 +36,7 @@ The Buddha told the monk, “[Listen closely!] Listen closely, and well consider
 
 ### Notes
 
-1. {:#n1} This, the previous, and the next three <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115/en/sujato" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. See the notes to <a href="SA1_31.html#n2" target="_blank">SĀ 1.31</a> for more about the definition of the Dharma teacher found below. [\[back\]](#ref1)
+1. {:#n1} This, the previous, and the next three <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. See the notes to <a href="SA1_31.html#n2" target="_blank">SĀ 1.31</a> for more about the definition of the Dharma teacher found below. [\[back\]](#ref1)
 
 ---
 
