--- a/01_agama/samyukta/01/SA1_37.md
+++ b/01_agama/samyukta/01/SA1_37.md
@@ -72,7 +72,7 @@ He replied, “No.”
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.50/en/sujato" target="_blank">SN 22.50</a> and a Sanskrit fragment, <a href="https://suttacentral.net/sf90/san/vallee" target="_blank">SF 90</a>. The discourse presented here is taught by Śāriputra rather than the Buddha. It shares the same analysis of the five aggregates (knowing them and their formation, cessation, and path to cessation), but not the conclusion found in SN 22.50. The Pali <em>sutta</em> omits the repetition of the argument that begins at §5.<br/>
+1. {:#n1} This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.50" target="_blank">SN 22.50</a> and a Sanskrit fragment, <a href="https://suttacentral.net/sf90/san/vallee" target="_blank">SF 90</a>. The discourse presented here is taught by Śāriputra rather than the Buddha. It shares the same analysis of the five aggregates (knowing them and their formation, cessation, and path to cessation), but not the conclusion found in SN 22.50. The Pali <em>sutta</em> omits the repetition of the argument that begins at §5.<br/>
 SF90 is nearly identical to this <em>sūtra</em>, but it says that ascetics and priests either badly and skillfully understand the aggregates, not that they are capable or not of stopping them. Most of the concluding argument is lost in the fragment, too, but it wasn’t omitted like it was in SN. [\[back\]](#ref1)
 
 ---
