--- a/01_agama/samyukta/01/SA1_38.md
+++ b/01_agama/samyukta/01/SA1_38.md
@@ -75,7 +75,7 @@ He replied, “No.”
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is a second variant of <a href="SA1_36.html" target="_blank">SĀ 1.36</a>. It’s closest parallels are <a href="https://suttacentral.net/sn22.50/en/sujato" target="_blank">SN 22.50</a> and a Sanskrit fragment, <a href="https://suttacentral.net/sf90/san/vallee" target="_blank">SF 90</a>.<br/>
+1. {:#n1} This <em>sūtra</em> is a second variant of <a href="SA1_36.html" target="_blank">SĀ 1.36</a>. It’s closest parallels are <a href="https://suttacentral.net/sn22.50" target="_blank">SN 22.50</a> and a Sanskrit fragment, <a href="https://suttacentral.net/sf90/san/vallee" target="_blank">SF 90</a>.<br/>
 The discourse presented here is taught by Śāriputra rather than the Buddha (which is the case in SN). It expands the analysis of the aggregates found in <a href="SA1_37.html" target="_blank">SĀ 1.37</a> by adding their enjoyment, trouble, and escape in place of the path to their cessation. It also changes the conclusion slightly to say ascetics and priests are capable or not of going beyond the aggregates. The remainder follows the template found in the previous two <em>sūtra</em>s until the end, where there’s a different description of a noble disciple’s liberation. This <em>sūtra</em> matches the S. fragment SF90 better than it does SN 22.50. [\[back\]](#ref1)
 
 ---
