--- a/01_agama/samyukta/01/SA1_39.md
+++ b/01_agama/samyukta/01/SA1_39.md
@@ -54,7 +54,7 @@ next: SA1_40.html
 
 ### Notes
 
-1. {:#n1} This and the next two <em>sūtra</em>s correspond to <a href="https://suttacentral.net/sn22.129/en/sujato" target="_blank">SN 22.129-135</a>, and their closest parallels are <a href="https://suttacentral.net/sn22.133/en/sujato" target="_blank">SN 22.133-135</a>, which combine the definition of ignorance and insight into a single discourse. This particular <em>sūtra</em> doesn’t have a direct parallel but represents a variant of the same basic template. [\[back\]](#ref1)
+1. {:#n1} This and the next two <em>sūtra</em>s correspond to <a href="https://suttacentral.net/sn22.129" target="_blank">SN 22.129-135</a>, and their closest parallels are <a href="https://suttacentral.net/sn22.133" target="_blank">SN 22.133-135</a>, which combine the definition of ignorance and insight into a single discourse. This particular <em>sūtra</em> doesn’t have a direct parallel but represents a variant of the same basic template. [\[back\]](#ref1)
 
 ---
 
