--- a/01_agama/samyukta/01/SA1_40.md
+++ b/01_agama/samyukta/01/SA1_40.md
@@ -54,7 +54,7 @@ next: SA1_41.html
 
 ### Notes
 
-1. {:#n1} This is the second of three <em>sūtra</em>s that correspond to <a href="https://suttacentral.net/sn22.129/en/sujato" target="_blank">SN 22.129-135</a>. Their closest parallels are <a href="https://suttacentral.net/sn22.133/en/sujato" target="_blank">SN 22.133-135</a>, which combine the definition of ignorance and insight into a single discourse. This particular <em>sūtra</em> is closest to <a href="https://suttacentral.net/sn22.135/en/sujato" target="_blank">SN 22.135</a>. [\[back\]](#ref1)
+1. {:#n1} This is the second of three <em>sūtra</em>s that correspond to <a href="https://suttacentral.net/sn22.129" target="_blank">SN 22.129-135</a>. Their closest parallels are <a href="https://suttacentral.net/sn22.133" target="_blank">SN 22.133-135</a>, which combine the definition of ignorance and insight into a single discourse. This particular <em>sūtra</em> is closest to <a href="https://suttacentral.net/sn22.135" target="_blank">SN 22.135</a>. [\[back\]](#ref1)
 
 ---
 
