--- a/01_agama/samyukta/01/SA1_41.md
+++ b/01_agama/samyukta/01/SA1_41.md
@@ -54,7 +54,7 @@ next: SA1_42.html
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> and the previous one are variants of <a href="SA1_39.html" target="_blank">SĀ 1.39</a>. All three correspond generally to <a href="https://suttacentral.net/sn22.129/en/sujato" target="_blank">SN 22.129-135</a>. This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.134/en/sujato" target="_blank">SN 22.134</a>. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> and the previous one are variants of <a href="SA1_39.html" target="_blank">SĀ 1.39</a>. All three correspond generally to <a href="https://suttacentral.net/sn22.129" target="_blank">SN 22.129-135</a>. This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.134" target="_blank">SN 22.134</a>. [\[back\]](#ref1)
 
 ---
 
