--- a/01_agama/samyukta/01/SA1_42.md
+++ b/01_agama/samyukta/01/SA1_42.md
@@ -60,7 +60,7 @@ next: SA1_43.html
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is similar to <a href="https://suttacentral.net/sn22.122/en/sujato" target="_blank">SN 22.122-123</a> and EĀ 34.1. The version in EĀ matches the Pali parallel in that “direct realization” isn’t mentioned. Instead, the initial question is about an “ethical” monk. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is similar to <a href="https://suttacentral.net/sn22.122" target="_blank">SN 22.122-123</a> and EĀ 34.1. The version in EĀ matches the Pali parallel in that “direct realization” isn’t mentioned. Instead, the initial question is about an “ethical” monk. [\[back\]](#ref1)
 
 ---
 
