--- a/01_agama/samyukta/01/SA1_43.md
+++ b/01_agama/samyukta/01/SA1_43.md
@@ -36,7 +36,7 @@ next: SA1_44.html
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> represents a transition from teachings given by Śāriputra to those given by Ānanda. The closest parallel is found at <a href="https://suttacentral.net/sn22.21/en/sujato" target="_blank">SN 22.21</a>, in which Ānanda asks the Buddha to define cessation, rather than Śāriputra asking Ānanda. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> represents a transition from teachings given by Śāriputra to those given by Ānanda. The closest parallel is found at <a href="https://suttacentral.net/sn22.21" target="_blank">SN 22.21</a>, in which Ānanda asks the Buddha to define cessation, rather than Śāriputra asking Ānanda. [\[back\]](#ref1)
 
 ---
 
