--- a/01_agama/samyukta/01/SA1_45.md
+++ b/01_agama/samyukta/01/SA1_45.md
@@ -88,7 +88,7 @@ next: SA1_46.html
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.90/en/sujato" target="_blank">SN 22.90</a>. It picks up where the <cite>Parinirvāṇa Sūtra</cite> left off regarding the story of Chandaka, who had served as the Buddha’s servant before he left home. As a monk, he couldn’t overcome his arrogance and was verbally abusive. When asked how to deal with his bad behavior, the Buddha advised the Saṅgha to avoid speaking to him if it continued. Here, we have a story of Chandaka making amends with the Saṅgha after the Buddha had passed away. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.90" target="_blank">SN 22.90</a>. It picks up where the <cite>Parinirvāṇa Sūtra</cite> left off regarding the story of Chandaka, who had served as the Buddha’s servant before he left home. As a monk, he couldn’t overcome his arrogance and was verbally abusive. When asked how to deal with his bad behavior, the Buddha advised the Saṅgha to avoid speaking to him if it continued. Here, we have a story of Chandaka making amends with the Saṅgha after the Buddha had passed away. [\[back\]](#ref1)
 2. {:#n2} <em>senior monks.</em>. C. 上座比丘, P. <em>therā bhikkhū</em>. C. 上座 (lit. “high seat”) likely translated the equiv. of P. <em>thera</em>. It refers to an elder monk who serves as the head of a <em>saṅgha</em> or monastery. Such a monastic would get the “high” or “head” seat when the assembly is seated together. I’ve translated the term functionally as “senior.”<br/>
 <em>Residence of Sages in the Deer Preserve of Bārāṇasī.</em> C. ⋯波羅㮈國、仙人住處、鹿野苑, P. <em>bārāṇasiyaṁ viharanti isipatane migadāye</em>. An equiv. of S. Bārāṇasī is here translit. as EMC. pua-la-na = G. Barana[si] (the final syllable being dropped). The other two place names are translated.<br/>
 <em>Residence of Sages.</em> 仙人住處 lit. means “sage’s residence” or “hermitage,” which presumably translates G. *Iṣipadana (P. Isipatana, S. Ṛṣipatana). This translation, which was the consensus during the pre-Tang era in China, does not match the accepted understanding of the place name in Pali and some Sanskrit sources.<br/>
