--- a/01_agama/samyukta/01/SA1_46.md
+++ b/01_agama/samyukta/01/SA1_46.md
@@ -57,7 +57,7 @@ next: SA1_47.html
 
 ### Notes
 
-1. {:#n1} The <em>sūtra</em> is remarkably similar to both <a href="https://suttacentral.net/sn22.101/en/sujato" target="_blank">SN 22.101</a> and <a href="https://suttacentral.net/an7.71/en/sujato" target="_blank">AN 7.71</a>. It contains the same lesson that liberation occurs naturally as a result of training and the same three illustrating similes of a brooding hen, a workman’s axe handle, and a seafaring ship. [\[back\]](#ref1)
+1. {:#n1} The <em>sūtra</em> is remarkably similar to both <a href="https://suttacentral.net/sn22.101" target="_blank">SN 22.101</a> and <a href="https://suttacentral.net/an7.71" target="_blank">AN 7.71</a>. It contains the same lesson that liberation occurs naturally as a result of training and the same three illustrating similes of a brooding hen, a workman’s axe handle, and a seafaring ship. [\[back\]](#ref1)
 2. {:#n2} <em>Citra the cowherd’s village in Kuru</em>. C. 拘留國雜色牧牛聚落. S./P. Kuru is translit. as 拘留 (EMC. kɪu-lɪəu), and 國 indicates that it’s the name of a country. S. Citra (P. Citta) has been translated as 雜色 (lit. “variously colored”), who is identified as a cowherd (牧牛, lit. “pasturer of cattle”). Finally, 聚落 is the term for a village or hamlet. [\[back\]](#ref2)
 3. {:#n3} <em>a brooding chicken that lays a clutch of eggs</em>. C. 伏鷄生子眾多. 伏 has a contextual meaning when used with birds to mean brooding eggs (presumably because birds look like they are hiding their eggs when they sit on the nest). 生子 lit. means to give birth to offspring, but a chicken lays eggs rather than giving birth to live young. I’ve translated the expression assuming it means laying eggs. Otherwise, it might be intended to mean hatching her chicks from the eggs, which Buddhists considered to be a form of birth. [\[back\]](#ref3)
 4. {:#n4} <em>a mason</em>. C. 巧師. S./P. <em>palagaṇḍa</em>. The C. translation 巧師 appears to be a corruption, or at least an obscure reading. Lit. 巧師 means only “skilled artisan,” if we read 師 to mean a professional of some kind. However, a similar C. word 圬 does mean a mason. I’ve translated the passage assuming that 巧 = 圬 here, given that it agrees with the parallel passage in SN 22.101.<br/>
