--- a/01_agama/samyukta/01/SA1_47.md
+++ b/01_agama/samyukta/01/SA1_47.md
@@ -117,7 +117,7 @@ The monk said to the Buddha, “No, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is a parallel to <a href="https://suttacentral.net/sn22.96/en/sujato" target="_blank">SN 22.96</a> and MĀ 61. The latter is interesting in that it represents a different version from another Savāstivāda canon that placed it in the <em>Madhyama Āgama</em>. This is likely direct evidence of a tradition moving <em>sūtra</em>s from one collection to another.<br/>
+1. {:#n1} This <em>sūtra</em> is a parallel to <a href="https://suttacentral.net/sn22.96" target="_blank">SN 22.96</a> and MĀ 61. The latter is interesting in that it represents a different version from another Savāstivāda canon that placed it in the <em>Madhyama Āgama</em>. This is likely direct evidence of a tradition moving <em>sūtra</em>s from one collection to another.<br/>
 The main difference between the SN 22.96 and these parallels is that it lacks the passage in which the Buddha lists several different forms of rebirth in the heavens as a result of cultivating merit. It also lacks the conclusion that depicts the monk following the teaching and becoming an <em>arhat</em>.  [\[back\]](#ref1)
 2. {:#n2} <em>remains permanent, eternal, unchanging, and the same.</em> C. 常、恒、不變易、正住, P. <em>nicca dhuva sassata avipariṇāmadhamma sassatisama tatheva ṭhassati</em>. The meaning of 正住 is the main difficulty in this passage. Without looking at the P. parallel, it would seem to mean “correct abode,” reading 正 as modifying 住 and the pair forming another descriptor of form. However, when we consult the parallel passage in SN 22.96, we find that <em>ṭhassati</em> (“will remain”) corresponds to 住 as the verb of the sentence, and 正 corresponds to <em>sassatisama</em> (“always the same”). The confusion is caused by the translator retaining the Indic SOV grammar in C., which uses a SVO grammar.<br/>
 #Beyond this, it would seem that two things have happened in these two texts. In the P. parallel, <em>sassati</em> has been added to <em>sama</em> to create a clearer meaning, which was a common practice in Buddhist texts. In the C. translation, G. <em>sama</em> (“same, equal”) has been confused for G. <em>saṃma</em> (“correct, proper”), which sometimes happened because <em>saṃma</em> was routinely abbrev. to <em>sama</em> in G. texts.<br/>
