--- a/01_agama/samyukta/01/SA1_49.md
+++ b/01_agama/samyukta/01/SA1_49.md
@@ -42,7 +42,7 @@ next: SA1_53.html
 
 ### Notes
 
-1. {:#n1} This and the next <em>sūtra</em> together represent a variant of <a href="https://suttacentral.net/sn22.99/en/sujato" target="_blank">SN 22.99</a>. It’s only slightly different in structure and includes the same explanatory similes. However, the ignorance that causes sentient beings to be trapped in the cycle of birth and death is defined here as not knowing the aggregates and their formation, cessation, enjoyment, trouble, and escape. In SN 22.99, ignorance is described as taking the aggregates as self. The next <em>sūtra</em> continues this discourse, taking the simile of the dog tied to a post as a point of departure. <a href="SA1_50.html" target="_blank">SĀ 1.50</a> appears to be a commentary that became a companion <em>sūtra</em> to this one. [\[back\]](#ref1)
+1. {:#n1} This and the next <em>sūtra</em> together represent a variant of <a href="https://suttacentral.net/sn22.99" target="_blank">SN 22.99</a>. It’s only slightly different in structure and includes the same explanatory similes. However, the ignorance that causes sentient beings to be trapped in the cycle of birth and death is defined here as not knowing the aggregates and their formation, cessation, enjoyment, trouble, and escape. In SN 22.99, ignorance is described as taking the aggregates as self. The next <em>sūtra</em> continues this discourse, taking the simile of the dog tied to a post as a point of departure. <a href="SA1_50.html" target="_blank">SĀ 1.50</a> appears to be a commentary that became a companion <em>sūtra</em> to this one. [\[back\]](#ref1)
 2. {:#n2} <em>for a long night</em>. C. 長夜, P. <em>dīgha ratti</em>, S. <em>dīrgha rātri</em>. This was a poetic way of saying “for eons,” as this <em>sūtra</em> makes clear by equating it with cosmological events. The eons that pass after the world is destroyed really can be called a literal long night, since there is no sun or moon. Sentient beings during this interval exist only in the heavens above the Brahma world. Usu., the darkness of the long night is metaphorical, as sentient beings cycle through eons of birth and death in ignorance. This expression doesn’t occur in SN 22.99, but it is found in other Theravāda sources. [\[back\]](#ref2)
 
 ---
