--- a/01_agama/samyukta/01/SA1_27.md
+++ b/01_agama/samyukta/01/SA1_27.md
@@ -45,7 +45,7 @@ That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve under
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is a variant of <a href="SA1_23.html" target="_blank">SĀ 1.23</a>, and it has a parallel in Pali at <a href="https://suttacentral.net/sn22.34/en/sujato" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33/en/sujato" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. The previous four <em>sūtra</em>s (SĀ 1.23-26) substituted different principles for the monk to contemplate but otherwise employ the same template. See <a href="../01/SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is a variant of <a href="SA1_23.html" target="_blank">SĀ 1.23</a>, and it has a parallel in Pali at <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. The previous four <em>sūtra</em>s (SĀ 1.23-26) substituted different principles for the monk to contemplate but otherwise employ the same template. See <a href="../01/SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [\[back\]](#ref1)
 2. {:#n2} <em>shaken</em>. C. 動搖. Like the English word “shaken,” 動搖 lit. means to “move, tremble, waver.” However, it’s very often used to refer to a person being disturbed, hesitant, or uncertain.   It can also mean to lose faith or confidence like “waver” often does in English. It’s not entirely clear to me which meaning is intended here, though I would assume that it’s psychological rather than literal. [\[back\]](#ref2)
 
 ---
