--- a/01_agama/samyukta/01/SA1_28.md
+++ b/01_agama/samyukta/01/SA1_28.md
@@ -36,7 +36,7 @@ next: SA1_29.html
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is a different version of <a href="https://suttacentral.net/sn22.124/en/sujato" target="_blank">SN 22.124-125</a>, where this monk appears in Pali <em>sutta</em>s. Cf. the <cite><a href="https://www.palikanon.com/english/pali_names/ka/kappa.htm" target="_blank">Buddhist Dictionary of Pali Proper Names</a></cite> for a summary of sources in which this character appears in Theravāda texts. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is a different version of <a href="https://suttacentral.net/sn22.124" target="_blank">SN 22.124-125</a>, where this monk appears in Pali <em>sutta</em>s. Cf. the <cite><a href="https://www.palikanon.com/english/pali_names/ka/kappa.htm" target="_blank">Buddhist Dictionary of Pali Proper Names</a></cite> for a summary of sources in which this character appears in Theravāda texts. [\[back\]](#ref1)
 2. {:#n2} <em>Kappa</em>. C. 劫波 (EMC <em>kɪʌp-pua</em> = G. <em>kapa</em> or <em>kappa</em>), P. <em>kappa</em>, S. <em>*kalpa</em>. The C. translit. appears to approximate an Indic <em>-pp-</em>, which would match a Pr. rather than S. pronunciation, but I haven’t located an attestation in S. sources for this character. Presumably, it would have been Sanskritized to <em>kalpa</em>. [\[back\]](#ref2)
 
 ---
