--- a/01_agama/samyukta/01/SA1_33.md
+++ b/01_agama/samyukta/01/SA1_33.md
@@ -33,7 +33,7 @@ The monk said to the Buddha, “Indeed, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This, the previous two, and the next two <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115/en/sujato" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. [\[back\]](#ref1)
+1. {:#n1} This, the previous two, and the next two <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. [\[back\]](#ref1)
 2. {:#n2} <em>going from one principle to the next</em>. C. 法次法向, P. <em>dhammānudhammappaṭipatti</em>. Lit. “proceeding from [one] <em>dharma</em> to the next <em>dharma</em>.” The C. translation of this term coupled with the explanation given by the Buddha suggests that it was interpreted to mean progressing through the gradual path to liberation in steps or stages. Here, the process of liberation from desire is used as the example for this, and this forces <em>dharma</em> to be read as a “state” or “principle.” I’ve opted for “principle,” along the lines of <em>dharma</em>’s common meaning of “rule” or “law.” [\[back\]](#ref2)
 
 ---
