--- a/01_agama/samyukta/01/SA1_35.md
+++ b/01_agama/samyukta/01/SA1_35.md
@@ -40,7 +40,7 @@ The monk said to the Buddha, “Indeed, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This and the previous four <em>sūtra</em> are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. In this case, however, that monk is not actually anonymous, being named Samṛddhi. All five of these <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115/en/sujato" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. [\[back\]](#ref1)
+1. {:#n1} This and the previous four <em>sūtra</em> are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. In this case, however, that monk is not actually anonymous, being named Samṛddhi. All five of these <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. [\[back\]](#ref1)
 
 ---
 
