--- a/01_agama/samyukta/01/SA1_36.md
+++ b/01_agama/samyukta/01/SA1_36.md
@@ -75,7 +75,7 @@ He replied, “No.”
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.49/en/sujato" target="_blank">SN 22.49</a> and a Sanskrit fragment, <a href="https://suttacentral.net/sf89/san/vallee" target="_blank">SF 89</a>. The discourse presented by these parallels is essentially the same, but here and in the S. fragment, it’s taught by Śāriputra rather than by the Buddha.<br/>
+1. {:#n1} This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.49" target="_blank">SN 22.49</a> and a Sanskrit fragment, <a href="https://suttacentral.net/sf89/san/vallee" target="_blank">SF 89</a>. The discourse presented by these parallels is essentially the same, but here and in the S. fragment, it’s taught by Śāriputra rather than by the Buddha.<br/>
 The next two <em>sūtra</em> are variants of this one. In the next <em>sūtra</em>, Śāriputra gives Śroṇa a teaching that analyzes the aggregates along the lines of the four truths (e.g., form, its formation, its cessation, and the path to its cessation). In SĀ 1.38, the path to cessation is replaced with enjoyment, trouble, and escape. In both variants, the argument found here about the impermanence, painfulness, and selflessness of the aggregates is repeated as well. Thus, the variation is the replacement of Śroṇa’s initial question with a brief teaching by Śāriputra. [\[back\]](#ref1)
 2. {:#n2} <em>Śroṇa</em>. C. 輸屢那 (EMC ʃɪu-lɪu-na), G. Ṣona or Śroṇa, P. Soṇa, S. Śroṇa. Interestingly, the BHS fragment spells his name as <em>chroṇa</em>. The C. translit. includes the <em>-r-</em> sound, so it appears to match the usu. S. pronunciation that’s also found in an G. attestation. [\[back\]](#ref2)
 
